--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
-    "@supabase/supabase-js": "^2.47.12",
+    "@supabase/supabase-js": "^2.49.4",
+    "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.4.1",
     "chart.js": "^4.4.8",
     "cheerio": "^1.0.0",
@@ -51,6 +52,7 @@
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "yahoo-finance2": "^2.13.3",
     "zod": "^3.24.1"
   },
