--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "lodash": "^4.17.21",
     "login": "^0.8.0",
     "lucide-react": "^0.469.0",
-    "next": "15.1.3",
+    "next": "^14.2.3",
     "next-pwa": "^5.6.0",
     "openai": "^4.82.0",
     "react": "^18.2.0",
