--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/pg": "^8.15.2",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
     "chart.js": "^4.4.8",
@@ -42,6 +43,7 @@
     "next": "15.1.3",
     "next-pwa": "^5.6.0",
     "openai": "^4.82.0",
+    "pg": "^8.16.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
